--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     compile "com.sparkjava:spark-core:2.6.0"
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile "com.sparkjava:spark-template-handlebars:2.5.5"
-
+    compile "org.sql2o:sql2o:1.6.0"
 }
 defaultTasks = ['clean']
 task stage(dependsOn: ['clean', 'installDist'])
