--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
-
 plugins {
     id 'java'
     id 'application'
 }
 
-group 'com.moringa.Heroika'
+group 'com.moringa.heroika'
 version '1.0-SNAPSHOT'
 
-mainClassName = 'App'
-
 sourceCompatibility = 1.8
+applicationName = "Heroika"
+mainClassName = "App"
 
 repositories {
     mavenCentral()
@@ -18,11 +17,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "com.sparkjava:spark-core:2.6.0"
+    compile 'org.slf4j:slf4j-simple:1.7.21'
     compile "com.sparkjava:spark-template-handlebars:2.5.5"
-    compile 'org.slf4j:slf4j-simple:1.7.21'
-
-    compile 'org.slf4j:slf4j-simple:1.7.21'
-
-    compile "org.sql2o:sql2o:1.6.0"
 
 }
+defaultTasks = ['clean']
+task stage(dependsOn: ['clean', 'installDist'])
